--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/public/assets/estante.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>proyecto-13-frontend2</title>
+    <title>El Estante Rebelde</title>
   </head>
   <body>
     <div id="root"></div>
