--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/public/assets/estante.png" />
+    <link rel="icon" href="/assets/estante.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>El Estante Rebelde</title>
   </head>
