--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Bungee&family=Momo+Trust+Display&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image/svg+xml" href="/assets/estante.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>El Estante Rebelde</title>
